--- a/bio.html
+++ b/bio.html
@@ -85,11 +85,7 @@
                     Aeromik è un giovane dj nato a Venezia ed inizia a mettere mani sulla consolle all’età 9 anni. 
                     <br>Pochi anni a seguire capisce che è la sua strada e Inizia a prendere pratica iniziando così la sua
                     carriera dal 2014. 
-                    <br> Il suo percorso nel 
-                    mondo della musica parte suonando 
-                    <br>alle feste di compleanno dei suoi 
-                    amici pochi mesi <br>seguire il suo
-                    inizio nel mondo del djing.
+                    <br> 
                 </h1>
             </div>
         </div>
@@ -97,10 +93,7 @@
         <div class="box-div" id="box-due">
             <div id="right-txt">
                 <h1>
-                    Aeromik è un giovane dj nato a Venezia ed inizia a mettere mani sulla consolle all’età 9 anni. 
-                    <br>Pochi anni a seguire capisce che è la sua strada e Inizia a prendere pratica iniziando così la sua
-                    carriera dal 2014. 
-                    <br> Il suo percorso nel 
+                    Il suo percorso nel 
                     mondo della musica parte suonando 
                     <br>alle feste di compleanno dei suoi 
                     amici pochi mesi <br>seguire il suo
