--- a/bio.html
+++ b/bio.html
@@ -104,5 +104,15 @@
 
     </section>
 
+    <footer style="position: fixed; padding-left: 20px; bottom: 20px;">
+        <p><a id="ref_priamixCopy" target="_blank" href="https://mattepriaggg.github.io/me/index.html">Created by</a> 
+            <a
+                style="font-style: italic;
+                        text-decoration: underline;"
+                id="refa_priamixCopy" target="_blank" href="https://mattepriaggg.github.io/me/index.html">Priamix
+            </a>
+        </p>
+    </footer>
+
 </body>
 </html>
